--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-icons": "^4.7.1",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.8.1",
-    "styled-components": "^5.3.6"
+    "styled-components": "^5.3.6",
+    "swiper": "^9.2.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.24",
